[package]
name = "vmn"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
csv = "1.3.1"
rand = "0.9.1"
serde = {  version="1.0", features = ["derive"] }
struct-field-names-as-array = "0.3.0"
text_io = "0.1.13"
